# paper-trader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  database.py  paper_trader_mcp.py  pyproject.toml  server.py
