[project]
name = "paper-trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp[http]>=2.11.2",
    "numpy<2.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.42",
    "stock-indicators>=1.3.5",
    "ta-lib>=0.6.5",
    "yfinance>=0.2.65",
]
